<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <Button
        android:id="@+id/buttonTakePhoto"
        android:text="@string/takePhotoButton"
        android:drawableLeft="@drawable/camera"
        android:drawableStart="@drawable/camera"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/buttonHistory"
        android:text="@string/historyButton"
        android:drawableLeft="@drawable/history"
        android:layout_below="@+id/buttonTakePhoto"
        android:drawableStart="@drawable/history"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/buttonHelp"
        android:text="@string/helpButton"
        android:drawableLeft="@drawable/help"
        android:layout_below="@+id/buttonHistory"
        android:drawableStart="@drawable/help"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/buttonSettings"
        android:text="@string/settingsButton"
        android:drawableLeft="@drawable/settings"
        android:layout_below="@+id/buttonHelp"
        android:drawableStart="@drawable/settings"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/buttonAbout"
        android:text="@string/aboutButton"
        android:drawableLeft="@drawable/about"
        android:layout_below="@+id/buttonSettings"
        android:drawableStart="@drawable/about"
        style="@style/ButtonStyle" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/versionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/versionText"
        android:layout_below="@id/buttonAbout"
        style="@style/versionText" />
</RelativeLayout>
