<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aymen.projetv2.ProcessImageScreen">
    <TextView
        android:gravity="center"
        android:id="@+id/ImageSourceUri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="aymen"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_below="@+id/ImageSourceUri"
        android:contentDescription="@string/image_content_des" />
    <Button
        android:id="@+id/btnExtractFeatures"
        android:layout_width="fill_parent"
        android:text="@string/extractFeaturesButton"
        android:layout_above="@+id/btnClassification"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/btnClassification"
        android:layout_width="fill_parent"
        android:text="@string/classifyButton"
        android:layout_alignParentBottom="true"
        style="@style/ButtonStyle" />

</RelativeLayout>
