<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aymen.projetv2.Camira">
    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/ImageSourceUri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageSourceUri">
        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_content_des" />
        <ImageView
            android:id="@+id/drawingpaneImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_alignLeft="@+id/resultImage"
            android:layout_alignTop="@+id/resultImage"
            android:layout_alignRight="@+id/resultImage"
            android:layout_alignBottom="@+id/resultImage"
            android:contentDescription="@string/image_content_des" />
        </RelativeLayout>
    <Button
        android:id="@+id/buttonResize"
        android:layout_width="fill_parent"
        android:text="@string/adjustButton"
        android:layout_above="@+id/buttonAnalysis"
        style="@style/ButtonStyle" />
    <Button
        android:id="@+id/buttonAnalysis"
        android:layout_width="fill_parent"
        android:text="@string/analysisButton"
        android:layout_alignParentBottom="true"
        style="@style/ButtonStyle" />

</RelativeLayout>
